2003-07-03  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/Makefile.am: vtkGdcmReader.h should now be cleany installed
        when using make instal.

2003-07-03  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * setup.py : adding include dir of jpeg lib to compile all sources
      * */Win32/*.dsp : JPR fix for windows compilation

2003-07-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/jpeg/libijg8/jconfig.* : JPR bug fix : now compile on both
        linux and WINDOWS !
      * src/gdcmJpeg.cxx : JPR bug fix : erroneous include
      * src/win32/gdcmdll.dsp : JPR fix for windows compilation

2003-07-02  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * setup.py is again effective on un*x (takes into account the
        addon of the jpeg library)
      * Doc/DoxyDevelInstal.txt added (developper's raw documentation)
      * Doc/Doxy* updated (includes above enhancements)
      * INSTALL now points to web documentation

2003-07-01  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.h doesn't make unnecessary reference to
        gdcmUtil.h anymore.
      * gdcmPython/Makefile.am now avoids calling the wrappers for the
        clean target.
      * src/gdcm*.[cxx|h] :
        - to allow compilation with gcc 3.x
          -- clean up of STL usage (added explicit usage of std::)
          -- small fixes on exceptions.
          Note: linking not tested !
        - clean of doxygen comments to avoid warnings at documentation
          building stage.
      * vtk/vtkGdcmReader.cxx: g++ warning message clean up (platform
        dependent convertion).

2003-06-20  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Clean up of previous JPR garbage commit (not even commented in the
        Changelog):
        - Test/Makefile.am removed the reference to unexisting testTS.cxx
        - moved all jpeg related files from src to src/jpeg/libijg8, with
          addition/modification of Makefile.am and configure.in.